# stdarch

./: README.md
crates/std_detect/: Cargo.toml  README.md
crates/std_detect/src/: lib.rs
