# `notstd_detect` is a fork of std_detect (https://github.com/rust-lang/stdarch).
# There are no changes in the code, it has just been uploaded to crates.io to be available and up-to-date.
# The maintainers do not want to update the 4 years old version available on crates.io,
# since it is meant to be available with `std::detect`.
# Some features, however, are not available through `std::detect`.
[package]
name = "notstd_detect"
version = "0.4.0"
authors = [
    "Alex Crichton <alex@alexcrichton.com>",
    "Andrew Gallant <jamslam@gmail.com>",
    "Gonzalo Brito Gadeschi <gonzalobg88@gmail.com>",
]
description = "Fork of std_detect - Rust's standard library run-time CPU feature detection."
homepage = "https://github.com/rust-lang/stdarch"
repository = "https://github.com/rust-lang/stdarch"
readme = "README.md"
keywords = ["std", "run-time", "feature", "detection"]
categories = ["hardware-support"]
license = "MIT OR Apache-2.0"
edition = "2021"

[badges]
is-it-maintained-issue-resolution = { repository = "rust-lang/stdarch" }
is-it-maintained-open-issues = { repository = "rust-lang/stdarch" }
maintenance = { status = "experimental" }

[dependencies]
cfg-if = "1.0.0"

# When built as part of libstd
core = { version = "1.0.0", optional = true, package = "rustc-std-workspace-core" }
compiler_builtins = { version = "0.1.2", optional = true }
alloc = { version = "1.0.0", optional = true, package = "rustc-std-workspace-alloc" }

[target.'cfg(not(windows))'.dependencies]
libc = { version = "0.2.0", optional = true, default-features = false }

[dev-dependencies]
cupid = "0.6.0"

[features]
default = [ "std_detect_dlsym_getauxval", "std_detect_file_io" ]
std_detect_file_io = [ "libc" ]
std_detect_dlsym_getauxval = [ "libc" ]
std_detect_env_override = [ "libc" ]
rustc-dep-of-std = [
    "core",
    "compiler_builtins",
    "alloc",
]
